--- a/package.json
+++ b/package.json
@@ -23,16 +23,21 @@
   "dependencies": {
     "co": "^4.6.0",
     "jsdom": "^9.2.1",
+    "jsonwebtoken": "^7.4.2",
     "request": "^2.72.0",
     "xml2js": "^0.4.16"
   },
   "peerDependencies": {
-    "kth-node-log": "^2.0.0",
+    "kth-node-log": "^2.0.3",
     "kth-node-ldap": "^2.1.0",
     "passport": "^0.3.2",
     "passport-strategy": "^1.0.0"
   },
   "devDependencies": {
-    "standard": "^10.0.2"
+    "standard": "^10.0.2",
+    "kth-node-log": "^2.0.3",
+    "kth-node-ldap": "^2.1.0",
+    "passport": "^0.3.2",
+    "passport-strategy": "^1.0.0"
   }
 }
