--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "co": "^4.6.0",
     "jsdom": "^9.2.1",
+    "path-to-regexp": "^2.0.0",
     "request": "^2.72.0",
     "xml2js": "^0.4.16"
   },
