--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": ">=6"
   },
   "scripts": {
+    "build": "./build.sh",
     "test": "echo \"ok\"",
     "codecheck": "prettier",
     "preversion": "npm run codecheck && npm run test",
