--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
     "preversion": "npm run codecheck && npm run test",
     "postversion": "git push && git push --tags"
   },
+  "author": {
+    "name": "KTH",
+    "email": "infosys@kth.se",
+    "url": "https://github.com/KTH"
+  },
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/KTH/kth-node-passport-cas"
@@ -23,7 +29,6 @@
     "cas",
     "kth"
   ],
-  "license": "MIT",
   "dependencies": {
     "co": "^4.6.0",
     "jsdom": "^9.2.1",
