--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "kth-node-passport-cas",
-  "version": "3.1.8",
-  "description": "Cas authentication strategy for Passport based but modified from github.com/sadne/passport-cas.",
+  "version": "3.1.9",
+  "description": "Cas authentication strategy for Passport based on (but modified) github.com/sadne/passport-cas.",
   "main": "index.js",
   "engines": {
-    "node": ">=6"
+    "node": ">=8"
   },
   "scripts": {
     "build": "./build.sh",
@@ -30,7 +30,6 @@
     "kth"
   ],
   "dependencies": {
-    "co": "^4.6.0",
     "jsdom": "^9.2.1",
     "path-to-regexp": "^2.0.0",
     "request": "^2.72.0",
@@ -38,7 +37,6 @@
   },
   "peerDependencies": {
     "kth-node-log": "^3.0.2",
-    "kth-node-ldap": "^2.4.0",
     "passport": "^0.4.0",
     "passport-strategy": "^1.0.0"
   }
