--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "automaticPublish": "true",
   "main": "index.js",
   "engines": {
-    "node": "12"
+    "node": ">=12"
   },
   "scripts": {
     "build": "./build.sh",
